Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignObjectInteger.quorum
class Main
    action Main
        integer v = 5
        Test(v)
    end

    action Test(Object var)
    end
end
